--- a/src/shmemc/ucx/oshcxx.tmpl.in
+++ b/src/shmemc/ucx/oshcxx.tmpl.in
@@ -11,7 +11,7 @@ shmem_lib=@libdir@
 pmixlib_stanza="@PMIX_LIBS@"
 
 shmemlib_ldflags="-L$shmem_lib -Wl,-rpath -Wl,$shmem_lib"
-shmemlib_libs="-lshmem -lshmemi -lshmemc -lshmemu"
+shmemlib_libs="-lshmem -lshmemi -lshmemc-ucx -lshmemu"
 shmemlib_stanza="$shmemlib_ldflags $shmemlib_libs $pmixlib_stanza"
 
 # set to whichever comms library chosen
