--- a/src/shmemc/Makefile.am
+++ b/src/shmemc/Makefile.am
@@ -11,20 +11,13 @@ libshmemc_ucx_a_SOURCES    = comms.c \
 
 libshmemc_ucx_a_CFLAGS = $(UCX_CFLAGS) $(PMIX_CFLAGS) $(OTHER_CPPFLAGS)
 
+# support C by default, plus something to run it with
+
 MY_WRAPPERS       = oshcc oshrun
-
-oshcc:		oshcc.tmpl
-	cp $^ $@
-
-oshrun:		oshrun.tmpl
-	cp $^ $@
 
 if ENABLE_CXX
 
 MY_WRAPPERS      += oshcxx
-
-oshcxx:		oshcxx.tmpl
-	cp $^ $@
 
 install-exec-hook:
 	cd $(bindir); \
@@ -35,9 +28,6 @@ endif
 if ENABLE_FORTRAN
 
 MY_WRAPPERS      += oshfort
-
-oshfort:	oshcc.tmpl
-	cp $^ $@
 
 endif
 
