Minimize the ucx directory.  Move constructed calls (e.g. strided) up a level.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,8 +1,3 @@
-shmemu_dir             = shmemu
-shmemu_cppflags        = -I$(top_srcdir)/src/$(shmemu_dir)
-shmemu_ldflags         = -L$(shmemu_dir)
-shmemu_libs            = -lshmemu
-
 shmemc_dir             = shmemc
 shmemc_cppflags        = -I$(top_srcdir)/src/$(shmemc_dir)
 shmemc_ldflags         =
@@ -13,7 +8,7 @@ shmemc_libs            =
 #shmemi_ldflags         = -L$(shmemi_dir)
 #shmemi_libs            = -lshmemi
 
-SUBDIRS                = $(shmemu_dir) $(shmemc_dir)
+SUBDIRS                = $(shmemc_dir)
 
 
 MY_SOURCES             = \
@@ -61,13 +56,13 @@ MY_INCLUDE             = -I../include
 lib_LTLIBRARIES        = libshmem.la
 libshmem_la_SOURCES    = $(LIBSHMEM_SOURCES)
 libshmem_la_CFLAGS     = $(AM_CFLAGS)
-libshmem_la_CPPFLAGS   = $(shmemu_cppflags) $(MY_INCLUDE)
+libshmem_la_CPPFLAGS   = $(shmemc_cppflags) $(MY_INCLUDE)
 libshmem_la_LDFLAGS    = -version-info 0:0:0
 
 lib_LIBRARIES          = libshmem.a
 libshmem_a_SOURCES     = $(LIBSHMEM_SOURCES)
-libshmem_a_CPPFLAGS    = $(shmemu_cppflags) $(MY_INCLUDE)
+libshmem_a_CPPFLAGS    = $(shmemc_cppflags) $(MY_INCLUDE)
 
 bin_PROGRAMS           = osh_info
 osh_info_SOURCES       = osh_info.c
-osh_info_LDFLAGS       = $(shmemu_ldflags) $(shmemu_libs)
+osh_info_LDFLAGS       = $(shmemc_ldflags)
