--- a/src/shmemc/oshcxx.in
+++ b/src/shmemc/oshcxx.in
@@ -14,8 +14,7 @@ shmemlib_ldflags="-L$shmem_lib -Wl,-rpath -Wl,$shmem_lib"
 shmemlib_libs="-lshmem -lshmemc-ucx"
 shmemlib_stanza="$shmemlib_ldflags $shmemlib_libs $pmixlib_stanza"
 
-# set to whichever comms library chosen
-comms_stanza="@COMMS_LIBS@"
+comms_stanza="@UCX_LIBS@"
 
 # and make it available
 shmemlib_stanza="$shmemlib_stanza $comms_stanza"
