Slew of fixes to make start-up register things in correct order, so that we get launch-environment, heap place creation, UCX, publish/exchanges.
Still todo is key exchanges for put/get

--- a/src/shmemc/Makefile.am
+++ b/src/shmemc/Makefile.am
@@ -14,7 +14,8 @@ libshmemc_ucx_a_SOURCES    = \
 				mcs-lock.c \
 				dlmalloc.c \
 				memalloc.c \
-				shmemu-init.c
+				shmemu-init.c \
+				shmemc-init.c
 
 libshmemc_ucx_a_CFLAGS = $(UCX_CFLAGS) $(PMIX_CFLAGS) $(OTHER_CPPFLAGS)
 
