Simplify the EP teardown for now
Later will want to not wait on each EP sequentially

--- a/src/shmemc/Makefile.am
+++ b/src/shmemc/Makefile.am
@@ -5,6 +5,7 @@ OTHER_CPPFLAGS         = -I$(srcdir)/../shmemu \
 
 lib_LIBRARIES          = libshmemc-ucx.a
 libshmemc_ucx_a_SOURCES    = \
+				progress.c \
 				hostname.c logger.c timer.c unitparse.c \
 				pmix-client.c \
 				ucx-init.c \
