Wait until and barriers

--- a/include/shmem/api.h.in
+++ b/include/shmem/api.h.in
@@ -901,7 +901,7 @@ extern "C"
      *
      * @subsection c C/C++
      @code
-     void shmem_long_wait_until(volatile long *ivar, int cmp, long cmp_value);
+     void shmem_long_wait_until(long *ivar, int cmp, long cmp_value);
      @endcode
      *
      * @subsection f Fortran
@@ -916,15 +916,15 @@ extern "C"
      * @return None.
      *
      */
-    void shmem_long_wait_until(volatile long *ivar, int cmp, long cmp_value);
+    void shmem_long_wait_until(long *ivar, int cmp, long cmp_value);
 
     /* see \ref shmem_long_wait_until() */
-    void shmem_short_wait_until(volatile short *ivar, int cmp,
+    void shmem_short_wait_until(short *ivar, int cmp,
                                 short cmp_value);
     /* see \ref shmem_long_wait_until() */
-    void shmem_int_wait_until(volatile int *ivar, int cmp, int cmp_value);
+    void shmem_int_wait_until(int *ivar, int cmp, int cmp_value);
     /* see \ref shmem_long_wait_until() */
-    void shmem_longlong_wait_until(volatile long long *ivar, int cmp,
+    void shmem_longlong_wait_until(long long *ivar, int cmp,
                                    long long cmp_value);
 
     /**
@@ -934,7 +934,7 @@ extern "C"
      *
      * @subsection c C/C++
      @code
-     void shmem_long_wait(volatile long *ivar, long cmp_value);
+     void shmem_long_wait(long *ivar, long cmp_value);
      @endcode
      *
      * @subsection f Fortran
@@ -949,14 +949,14 @@ extern "C"
      * @return None.
      *
      */
-    void shmem_long_wait(volatile long *ivar, long cmp_value);
+    void shmem_long_wait(long *ivar, long cmp_value);
 
     /* see \ref shmem_long_wait() */
-    void shmem_short_wait(volatile short *ivar, short cmp_value);
+    void shmem_short_wait(short *ivar, short cmp_value);
     /* see \ref shmem_long_wait() */
-    void shmem_int_wait(volatile int *ivar, int cmp_value);
+    void shmem_int_wait(int *ivar, int cmp_value);
     /* see \ref shmem_long_wait() */
-    void shmem_longlong_wait(volatile long long *ivar, long long cmp_value);
+    void shmem_longlong_wait(long long *ivar, long long cmp_value);
 
     /*
      * atomic swaps
@@ -1631,7 +1631,7 @@ extern "C"
      *
      * @subsection c C/C++
      @code
-     void shmem_set_lock(volatile long *lock);
+     void shmem_set_lock(long *lock);
      @endcode
      *
      * @subsection f Fortran
@@ -1651,7 +1651,7 @@ extern "C"
      * @return None.
      *
      */
-    void shmem_set_lock(volatile long *lock);
+    void shmem_set_lock(long *lock);
 
     /**
      * @brief releases a distributed lock
@@ -1660,7 +1660,7 @@ extern "C"
      *
      * @subsection c C/C++
      @code
-     void shmem_clear_lock(volatile long *lock);
+     void shmem_clear_lock(long *lock);
      @endcode
      *
      * @subsection f Fortran
@@ -1679,7 +1679,7 @@ extern "C"
      * @return None.
      *
      */
-    void shmem_clear_lock(volatile long *lock);
+    void shmem_clear_lock(long *lock);
 
     /**
      * @brief tests a distributed lock
@@ -1688,7 +1688,7 @@ extern "C"
      *
      * @subsection c C/C++
      @code
-     void shmem_test_lock(volatile long *lock);
+     void shmem_test_lock(long *lock);
      @endcode
      *
      * @subsection f Fortran
@@ -1709,7 +1709,7 @@ extern "C"
      * @return non-zero if lock acquired, 0 if not.
      *
      */
-    int shmem_test_lock(volatile long *lock) _WUR;
+    int shmem_test_lock(long *lock) _WUR;
 
     /**
      * @brief These routines perform an atomic fetch from a remote PE
