--- a/configure.ac
+++ b/configure.ac
@@ -17,6 +17,8 @@ AC_CONFIG_MACRO_DIRS([m4])
 dnl AC_CONFIG_MACRO_DIR([m4])
 AM_INIT_AUTOMAKE([subdir-objects])
 
+AM_SILENT_RULES([yes])
+
 # C/C++
 AC_PROG_CC_C99
 AC_PROG_CC_C_O
