Add silly linear broadcast for now just to make it work

--- a/src/shmemc/Makefile.am
+++ b/src/shmemc/Makefile.am
@@ -12,6 +12,7 @@ libshmemc_ucx_a_SOURCES    = \
 				ucx-init.c \
 				ranks.c \
 				barrier.c \
+				broadcast.c \
 				comms.c \
 				wait.c \
 				mcs-lock.c \
