--- a/src/shmemc/Makefile.am
+++ b/src/shmemc/Makefile.am
@@ -1,10 +1,8 @@
-PMIX_CFLAGS            = @PMIX_CFLAGS@
+PMIX_CFLAGS               = @PMIX_CFLAGS@
 
-OTHER_CPPFLAGS         = -I$(srcdir)/../shmemu \
+OTHER_CPPFLAGS            = -I$(srcdir)/../shmemu \
 				-I../../include
-
-lib_LIBRARIES          = libshmemc-ucx.a
-libshmemc_ucx_a_SOURCES    = \
+LIBSHMEMC_SOURCES         = \
 				progress.c \
 				state.c \
 				hostname.c logger.c timer.c unitparse.c \
@@ -21,15 +19,17 @@ libshmemc_ucx_a_SOURCES    = \
 				shmemu-init.c \
 				shmemc-init.c
 
-libshmemc_ucx_a_CFLAGS = $(UCX_CFLAGS) $(PMIX_CFLAGS) $(OTHER_CPPFLAGS)
+lib_LIBRARIES             = libshmemc-ucx.a
+libshmemc_ucx_a_SOURCES   = $(LIBSHMEMC_SOURCES)
+libshmemc_ucx_a_CFLAGS    = $(UCX_CFLAGS) $(PMIX_CFLAGS) $(OTHER_CPPFLAGS)
 
 # support C by default, plus something to run it with
 
-MY_WRAPPERS       = oshcc oshrun
+MY_WRAPPERS               = oshcc oshrun
 
 if ENABLE_CXX
 
-MY_WRAPPERS      += oshcxx
+MY_WRAPPERS              += oshcxx
 
 install-exec-hook:
 	cd $(bindir); \
@@ -39,11 +39,11 @@ endif
 
 if ENABLE_FORTRAN
 
-MY_WRAPPERS      += oshfort
+MY_WRAPPERS              += oshfort
 
 endif
 
-bin_SCRIPTS = $(MY_WRAPPERS)
+bin_SCRIPTS               = $(MY_WRAPPERS)
 
 #
 # special override rule
