--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,8 +3,16 @@ shmemc_cppflags        = -I$(top_srcdir)/src/$(shmemc_dir)
 shmemc_ldflags         = -L$(shmemc_dir)
 shmemc_libs            = -lshmemc-ucx
 
-SUBDIRS                = $(shmemc_dir)
+shmemu_dir             = ./shmemu
+shmemu_cppflags        = -I$(top_srcdir)/src/$(shmemu_dir)
+shmemu_ldflags         = -L$(shmemu_dir)
+shmemu_libs            = -lshmemu
 
+SUBDIRS                = $(shmemc_dir) $(shmemu_dir)
+
+MY_INCLUDE             = -I../include
+
+all_cppflags           = $(shmemc_cppflags) $(shmemu_cppflags) $(MY_INCLUDE)
 
 MY_SOURCES             = \
 				init.c \
@@ -28,17 +36,14 @@ MY_SOURCES             = \
 
 
 if ENABLE_FORTRAN
-MY_SOURCES            += fortran/fortran.c \
-				fortran/fortran-mem.c
+MY_SOURCES            += fortran/fortran.c fortran/fortran-mem.c
 endif
 
 if ENABLE_EXPERIMENTAL
-MY_SOURCES            += wtime.c xor.c
-
-if ENABLE_FORTRAN
-MY_SOURCES            += fortran/fortranx.c
-endif
-
+MY_SOURCES            += wtime.c
+  if ENABLE_FORTRAN
+    MY_SOURCES        += fortran/fortranx.c
+  endif
 endif
 
 if ENABLE_PSHMEM
@@ -47,19 +52,17 @@ endif
 
 LIBSHMEM_SOURCES       = $(MY_SOURCES)
 
-MY_INCLUDE             = -I../include
-
 lib_LTLIBRARIES        = libshmem.la
 libshmem_la_SOURCES    = $(LIBSHMEM_SOURCES)
 libshmem_la_CFLAGS     = $(AM_CFLAGS)
-libshmem_la_CPPFLAGS   = $(shmemc_cppflags) $(MY_INCLUDE)
+libshmem_la_CPPFLAGS   = $(all_cppflags)
 libshmem_la_LDFLAGS    = -version-info 0:0:0
 
 lib_LIBRARIES          = libshmem.a
 libshmem_a_SOURCES     = $(LIBSHMEM_SOURCES)
-libshmem_a_CPPFLAGS    = $(shmemc_cppflags) $(MY_INCLUDE)
+libshmem_a_CPPFLAGS    = $(all_cppflags)
 
 bin_PROGRAMS           = osh_info
 osh_info_SOURCES       = osh_info.c
-osh_info_CPPFLAGS      = $(shmemc_cppflags)
-osh_info_LDFLAGS       = $(shmemc_ldflags) $(shmemc_libs)
+osh_info_CPPFLAGS      = $(all_cppflags)
+osh_info_LDFLAGS       = $(shmemu_ldflags) $(shmemu_libs)
