--- a/src/shmemu/Makefile.am
+++ b/src/shmemu/Makefile.am
@@ -1,3 +1,5 @@
+# For license: see LICENSE file at top-level
+
 OTHER_CPPFLAGS            = -I../../include -I$(srcdir)/../shmemc
 LIBSHMEMU_SOURCES         = hostname.c logger.c timer.c unitparse.c \
 				shmemu-init.c
