--- a/include/shmem.fh.in
+++ b/include/shmem.fh.in
@@ -1,3 +1,5 @@
+!     For license: see LICENSE file at top-level
+
       include 'shmem/defs.fh'
 
 !     For routines that return values (Currently adding only those that
