--- a/include/shmemx.fh.in
+++ b/include/shmemx.fh.in
@@ -1,4 +1,6 @@
-  double precision :: shmemx_wtime
+!     For license: see LICENSE file at top-level
 
-  logical :: shmemx_fence_test
-  logical :: shmemx_quiet_test
+      double precision :: shmemx_wtime
+
+      logical :: shmemx_fence_test
+      logical :: shmemx_quiet_test
