--- a/man/osh_info.1.in
+++ b/man/osh_info.1.in
@@ -1,3 +1,4 @@
+.\" For license: see LICENSE file at top-level
 .TH osh_info 1 "" "OSSS"
 .SH NAME
 \fBosh_info\fP - provide information about this OpenSHMEM installation
