--- a/man/oshcxx.1.in
+++ b/man/oshcxx.1.in
@@ -1,3 +1,4 @@
+.\" For license: see LICENSE file at top-level
 .TH oshcxx 1 "" "OSSS"
 .SH NAME
 \fBoshcxx | oshc++\fP \- compile an OpenSHMEM C++ program
