--- a/man/oshfort.1.in
+++ b/man/oshfort.1.in
@@ -1,3 +1,4 @@
+.\" For license: see LICENSE file at top-level
 .TH oshfort 1 "" "OSSS"
 .SH NAME
 \fBoshfort\fP \- compile an OpenSHMEM Fortran program
